<resources>
    <string name="pNameText">Product Name</string>
    <string name="uploadingProductText">Uploading Product....</string>
    <string name="uploadedProductText">Product Uploaded </string>
    <string name="idText">ID del producto</string>
    <string name="photoText">Photo</string>
    <string name="videoText">Video</string>
    <string name="categoryText">Category</string>
    <string name="colorText">Color</string>
    <string name="priceText">Price</string>
    <string name="ageText">Age</string>
    <string name="addProductButton">Add Product</string>
    <string name="addProductTitle">Add Product</string>
    <string name="app_name">Martí </string>
    <string name="SignupTitle">Signup</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="firstnameText">First name</string>
    <string name="lastnameText">Last name</string>
    <string name="addressText">Address</string>
    <string name="postalcodeText">Postal Code</string>
    <string name="heightText">Height</string>
    <string name="weightText">Weight</string>
    <string name="genderText">Gender</string>
    <string name="stateText">State</string>
    <string name="signupButton">Signup</string>
    <string name="loginButton">Have an account?</string>
    <string name="logginginText">Logging in...</string>
    <string name="passwordsNotMatchText">Passwords don\'t match!</string>
    <string name="signingupText">Signing Up...</string>
    <string name="welcomeText">Welcome!</string>
    <string name="signedupText">Done! You can now log in.</string>
    <string name="missingValuesText">All fields are required</string>
    <string name="userTakenText">That email is already registered</string>
    <string name="errorSigningupText">There was an error in the server while trying to sign up. Try again.</string>
    <string name="unknownResponseText">Error! Unknown response from the server.</string>
    <string name="queryErrorText">An error ocurred while executing the query... Please try again.</string>
    <string name="incorrectCredentialsText">Incorrect email and/or password</string>
    <string name="commsErrorText">Error! Could not connect to server. Try again later...</string>
    <string name="addtocartText">Add To Cart</string>
    <string name="loadingDataText">Loading data, please wait...</string>
    <string name="pickSizeText">Pick your size:</string>
    <string name="productAddedToCartText">Product added to shopping cart with size</string>
    <string name="sizeText">Size</string>
    <string name="checkoutButtonText">Checkout</string>
    <string name="shoppingCartTotalText">Cart Total</string>
    <string name="cartEmptyText">The shopping cart is empty!</string>
    <string name="credentialsErrorText">Error! Please log in again.</string>
    <string name="sizeErrorText">Please choose a size bigger than 5</string>
    <string name="outOfStockText">Out of stock</string>
    <string name="orderedText">Ordered</string>
    <string name="errorText">Error</string>
    <string name="notOrderedText">Not ordered</string>
    <string name="orderDetailsText">Order details</string>
    <string name="myOrdersMenuText">My Orders</string>
    <string name="logoutMenuText">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thankyouOrderText">Thank you for your order</string>
    <string name="userProfileTitleText">Your Information</string>
    <string name="nameText">Name</string>
    <string name="shippingAddressText">Shipping Address</string>
    <string name="editProfileButtonText">Edit Profile</string>
    <string name="editProfileText">Edit Your Profile</string>
    <string name="profileEditedSuccessText">Your profile was updated!</string>
    <string name="orderDateText">Date</string>
    <string name="orderTotalText">Order Total</string>
    <string name="orderText">Order</string>
    <string name="orderStatusText">Status</string>
    <string name="orderPendingText">Pending</string>
    <string name="orderShippingText">Shipping</string>
    <string name="orderShippedText">Shipped</string>
    <string name="orderCompletedText">Completed</string>
    <string name="shoppingCartTitle">Shopping Cart</string>
    <string name="viewOrderProductsButton">Ordered Products</string>
    <string name="orderIDText">Order ID</string>
    <string name="cancelOrderText">Cancel Order</string>
    <string name="confirmCancelOrderText">Are you sure you want to cancel this order? This cannot be undone.</string>
    <string name="orderCanceledText">Your order was canceled</string>
    <string name="editButtonText">Edit</string>
    <string name="deleteButtonText">Delete</string>
</resources>
