<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mike.moviles.Activities.Admin.newProduct"
    android:weightSum="1">


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.29" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:fontFamily="sans-serif"
        android:text="@string/SignupTitle"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04" />

    <EditText
        android:id="@+id/NameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/pNameText"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/IDTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/idText"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/PhotoTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/photoText"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/VideoTextField"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/videoText"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/CategoryTextField"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/categoryText"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ColoroTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/colorText"
            android:inputType="textPersonName" />

    </LinearLayout>

    <EditText
        android:id="@+id/PriceTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/priceText"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/AgeTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/ageText"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addProductButton" />


    </LinearLayout>
</LinearLayout>
