<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mike.moviles.Activities.SignupActivity"
    android:weightSum="1">


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.29" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_weight="0.01"
        app:srcCompat="@drawable/avocado_circle" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03" />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:fontFamily="sans-serif"
        android:text="@string/SignupTitle"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04" />

    <EditText
        android:id="@+id/firstNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/firstnameText"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/lastnameText"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/addressTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/addressText"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/heightTextField"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/heightText"
            android:inputType="number" />

        <EditText
            android:id="@+id/weightTextField"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weightText"
            android:inputType="number" />

        <EditText
            android:id="@+id/genderTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/genderText"
            android:inputType="textPersonName" />

    </LinearLayout>

    <EditText
        android:id="@+id/emailTextFieldSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/emailText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordOneTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordTwoTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signupButton" />


    </LinearLayout>
</LinearLayout>
