<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mike.moviles.Fragments.User.User.EditUserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/editProfileText"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameText"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstNameEditProfileTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstnameText"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/lastnameEditProfileTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastnameText"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailText"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEditProfileTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailText"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shippingAddressText"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addressEditProfileTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addressText"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.04"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/postalcodeText"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/postalcodeEditProfileTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/postalcodeText"
                    android:inputType="number"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.04"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stateText"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/stateEditProfileTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/stateText"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.22" />

        <Button
            android:id="@+id/editProfileDoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:elevation="5dp"
            android:text="@string/editProfileButtonText"
            android:textColor="@android:color/white" />

    </LinearLayout>

</FrameLayout>
